--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info,{i,"include"},{i,"/home/joq62/erlang/include"}]}.
 {deps, [
+       {lib_leader,{git,"https://github.com/joq62/lib_leader.git",{branch,"main"}}},	
        {lib_sd,{git,"https://github.com/joq62/lib_sd.git",{branch,"main"}}},
        {lib_ssh,{git,"https://github.com/joq62/lib_ssh.git",{branch,"main"}}}
        ]}.
